<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Story App</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="message_welcome_page">Discover exciting stories, share your own tales, and join a creative community. From fiction to inspiring stories, Story App offers a fun reading and writing experience. Start your storytelling journey now!</string>
    <string name="title_welcome_page">Welcome to Story App!</string>
    <string name="title_signup_page">Fill your personal data!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your email and password to login</string>
    <string name="title_login_page">Ready for sharing your story?</string>
    <string name="name">Name</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Logout</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="register_now">Register Now!</string>
    <string name="do_not_have_any_account">Don\'t have any account?</string>
    <string name="message_signup_page">Enter your name, email, and password</string>
    <string name="please_wait">Please wait..</string>
    <string name="password_minimum_characters">Password must be at least 8 characters long</string>
    <string name="title_profile_setting_page">Profile Setting</string>
    <string name="title_add_new_story">Add New Story</string>
    <string name="add_story">Add Story</string>
    <string name="action_profile">Action Profile</string>
    <string name="action_add_story">Action Add Story</string>
    <string name="image">Image</string>
    <string name="story_title">Story title</string>
    <string name="story_description">Story description</string>
    <string name="story_date">This is story date</string>
    <string name="add_image">Add Image</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_story">Upload Story</string>
    <string name="reload_story">Reload Story</string>
    <string name="error_invalid_email">Please enter a valid email address</string>
    <string name="no_image_selected">No image selected yet</string>
    <string name="upload_success">Upload success!</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark mode</string>
    <string name="theme">Theme</string>
    <string name="setting">Setting</string>
    <string name="go_to_language_setting">Go to language setting</string>
    <string name="error_token_not_found">Token not found</string>
    <string name="please_fill_the_form_correctly">Please fill the form correctly</string>
    <string name="network_error_please_check_your_connection">Network error. Please check your connection.</string>
    <string name="regex_email" tools:ignore="TypographyDashes">[a-zA-Z0-9._-]+@[a-zA-Z0-9.-]+\\.[a-zA-Z]{2,}</string>
    <string name="action_map">Action map</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="add_current_location">Add current location</string>
    <string name="story_location">This is story location</string>
    <string name="retry">Retry</string>
    <string name="title_map_page">Story Map</string>
    <string name="failed_load_stories">Failed to load stories</string>
</resources>